--- a/fit_model.Rmd
+++ b/fit_model.Rmd
@@ -7,6 +7,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 library(tidymodels)
 library(stacks)
+library(xgboost)
 library(yardstick)
 library(tidyverse)
 library(workflows)
